--- a/mal-derive/Cargo.toml
+++ b/mal-derive/Cargo.toml
@@ -13,7 +13,7 @@ path = "tests/test.rs"
 
 [dev-dependencies]
 trybuild = { version = "1.0.45", features = ["diff"] }
-mal = { path = ".." }
+mal_core = { path = "../mal-core" }
 
 [dependencies]
 syn = { version = "1.0.75", features = [ "full", "extra-traits"] }
